fix z-index

--- a/src/sass/components/_modal.scss
+++ b/src/sass/components/_modal.scss
@@ -567,3 +567,7 @@ $modal-img-shadow-brown: 0px 8px 0px rgba(213, 117, 63, 0.7),0px 9px 19.726px rg
         outline: none;
     }
 }
+
+.no-scroll {
+    overflow: hidden;
+}
