--- a/src/sass/layouts/_customer-reviews.scss
+++ b/src/sass/layouts/_customer-reviews.scss
@@ -1,4 +1,5 @@
 .customer {
+  z-index: -1;
   &__review{
     margin: 0 auto;
     background-image: url(../images/customer_reviews/reviews_backgorund480.jpg);
