--- a/src/sass/layouts/_gallery.scss
+++ b/src/sass/layouts/_gallery.scss
@@ -2,7 +2,7 @@
     position: relative;
     top:-24px;
     left:center;
-    z-index: 10;
+    z-index: 1;
     @include tablet{
         top: -164px;
     }
